arreglo cosas de navbar y home

--- a/tarea2/website_entrenamos.uy/src/main/webapp/resources/css/sticky-footer-navbar.css
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/resources/css/sticky-footer-navbar.css
@@ -35,3 +35,9 @@ body > .container {
 code {
   font-size: 80%;
 }
+
+.carousel-inner > .item >img{
+  min-height : 300px;
+  max-height : 300px;
+  width : 100%;
+}
