--- a/tarea2/website_entrenamos.uy/src/main/webapp/resources/css/consultacup.css
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/resources/css/consultacup.css
@@ -5,3 +5,6 @@
   border-top-left-radius: calc(0.25rem - 1px);
   border-bottom-left-radius: calc(0.25rem - 1px);
  }
+.card-title {
+  font-weight: bold;
+}
