--- a/tarea2/website_entrenamos.uy/.settings/org.eclipse.wst.common.component
+++ b/tarea2/website_entrenamos.uy/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                
+                                    
+    
     
     
     
@@ -7,18 +8,23 @@
     
     
     <wb-module deploy-name="website_entrenamos.uy">
-                                
+                                        
+        
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
-        <dependent-module archiveName="server_entrenamos.uy.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/server_entrenamos.uy/server_entrenamos.uy">
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/"/>
                         
+        
+        <dependent-module archiveName="server_entrenamos.uy.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/server_entrenamos.uy/server_entrenamos.uy">
+                                    
+            
             <dependency-type>uses</dependency-type>
-                    
+                                
+        
         </dependent-module>
-                                                                
+                                                                        
+        
         
         
         
@@ -26,7 +32,8 @@
         
         
         <property name="context-root" value="website_entrenamos.uy"/>
-                                                                
+                                                                        
+        
         
         
         
@@ -34,7 +41,8 @@
         
         
         <property name="java-output-path" value="/website_entrenamos.uy/build/classes"/>
-                                                            
+                                                                    
+    
     
     
     
@@ -42,7 +50,8 @@
     
     
     </wb-module>
-                            
+                                
+
 
 
 
