--- a/tarea2/websitemovil_entrenamos.uy/.settings/org.eclipse.wst.common.component
+++ b/tarea2/websitemovil_entrenamos.uy/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                            
+                                                
     
     
     
@@ -9,22 +9,27 @@
     
     
     
-    <wb-module deploy-name="website_entrenamos.uy">
-                                                        
+    
+    <wb-module deploy-name="websitemovil_entrenamos.uy-0.0.1-SNAPSHOT">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                                                                
         
         
         
         
         
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-                                                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                                                                
+        
         
         
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                        
+                                                                                                
+        
         
         
         
@@ -35,8 +40,10 @@
         
         
         <property name="java-output-path" value="/website_entrenamos.uy/build/classes"/>
+                
         <property name="context-root" value="websitemovil_entrenamos.uy"/>
-                                                                                    
+                                                                                            
+    
     
     
     
@@ -47,7 +54,8 @@
     
     
     </wb-module>
-                                        
+                                            
+
 
 
 
