--- a/tarea2/website_entrenamos.uy/.settings/org.eclipse.wst.common.component
+++ b/tarea2/website_entrenamos.uy/.settings/org.eclipse.wst.common.component
@@ -1,33 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                    
-    
-    
-    
-    
-    
-    
-    
-    <wb-module deploy-name="website_entrenamos.uy">
                                         
+    
+    
+    
+    
+    
+    
+    
+    
+    <wb-module deploy-name="website_entrenamos.uy-0.0.1-SNAPSHOT">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                                                
         
         
         
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-                                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                                                
+        
         
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                        
+                                                                                
         
-        <dependent-module archiveName="server_entrenamos.uy.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/server_entrenamos.uy/server_entrenamos.uy">
-                                    
-            
-            <dependency-type>uses</dependency-type>
-                                
-        
-        </dependent-module>
-                                                                        
         
         
         
@@ -36,7 +32,8 @@
         
         
         <property name="context-root" value="website_entrenamos.uy"/>
-                                                                        
+                                                                                
+        
         
         
         
@@ -45,7 +42,8 @@
         
         
         <property name="java-output-path" value="/website_entrenamos.uy/build/classes"/>
-                                                                    
+                                                                            
+    
     
     
     
@@ -54,7 +52,8 @@
     
     
     </wb-module>
-                                
+                                    
+
 
 
 
