--- a/tarea2/websitemovil_entrenamos.uy/.settings/org.eclipse.wst.common.component
+++ b/tarea2/websitemovil_entrenamos.uy/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                
+                                                    
     
     
     
@@ -10,9 +10,12 @@
     
     
     
-    <wb-module deploy-name="websitemovil_entrenamos.uy-0.0.1-SNAPSHOT">
+    
+    <wb-module deploy-name="movil">
+                
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                
+                                                                        
+        
         
         
         
@@ -20,7 +23,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                
+                                                                        
+        
         
         
         
@@ -28,7 +32,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                
+                                                                                                        
+        
         
         
         
@@ -40,9 +45,9 @@
         
         
         <property name="java-output-path" value="/website_entrenamos.uy/build/classes"/>
-                
-        <property name="context-root" value="websitemovil_entrenamos.uy"/>
-                                                                                            
+        <property name="context-root" value="movil"/>
+                                                                                                    
+    
     
     
     
@@ -54,7 +59,8 @@
     
     
     </wb-module>
-                                            
+                                                
+
 
 
 
